<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>irobot_events_executor</name>
  <version>1.0.0</version>
  <description>Package containing the C++ implementation of the iRobot Events Executor</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <maintainer email="mpasserino@irobot.com">Mauro Passerino</maintainer>
  <license>BSD 3-Clause License</license>
  <author email="asoragna@irobot.com">Alberto Soragna</author>
  <author email="mpasserino@irobot.com">Mauro Passerino</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcpputils</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcpputils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
