<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>irobot_lock_free_events_queue</name>
  <version>1.0.0</version>
  <description>Package containing an alternative queue implementation for the iRobot Events Executor</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <maintainer email="mpasserino@irobot.com">Mauro Passerino</maintainer>
  <license>BSD 3-Clause License</license>
  <author email="asoragna@irobot.com">Alberto Soragna</author>
  <author email="mpasserino@irobot.com">Mauro Passerino</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>irobot_events_executor</build_depend>

  <exec_depend>irobot_events_executor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
